plugins/sunfish/awareness: Clean URL construction future deprecation.